# mallow-gumball

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: deploy-program.yml
clients/js/: README.md  package.json  pnpm-lock.yaml
clients/js/src/: closeGumballMachine.ts  constants.ts  (+8 more)
configs/: kinobi.cjs  validator.cjs
configs/program-scripts/: build.sh
idls/: gumball_guard.json  mallow_gumball.json
programs/gumball-guard/: Anchor.toml  Cargo.toml  README.md
programs/gumball-guard/program/: Cargo.toml
programs/gumball-guard/program/src/: errors.rs  lib.rs  utils.rs
programs/gumball-guard/program/src/events/: mod.rs  payment_event.rs
programs/gumball-guard/program/src/guards/: allocation.rs  allow_list.rs  bot_tax.rs  mint_limit.rs  mod.rs  nft_burn.rs  nft_gate.rs  nft_payment.rs  program_gate.rs  redeemed_amount.rs  sol_payment.rs  start_date.rs  token2022_payment.rs  token_burn.rs  token_gate.rs  token_payment.rs
programs/gumball-guard/program/src/instructions/: draw.rs  draw_jellybean.rs  mod.rs  route.rs  update.rs  withdraw.rs  wrap.rs
programs/gumball-guard/program/src/processors/: draw.rs  mod.rs
programs/gumball-guard/program/src/state/: gumball_guard.rs
programs/mallow-gumball/: README.md
programs/mallow-gumball/program/: Cargo.toml
programs/mallow-gumball/program/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/mallow-gumball/program/src/instructions/: add_core_asset.rs  add_nft.rs  add_tokens.rs  approve_add_item.rs  cancel_add_core_asset_request.rs  cancel_add_nft_request.rs  claim_core_asset.rs  claim_nft.rs  claim_tokens.rs  close_gumball_machine.rs  initialize.rs  manage_buy_back_funds.rs  mod.rs  remove_core_asset.rs  remove_nft.rs  remove_tokens.rs  request_add_core_asset.rs  request_add_nft.rs  sell_item.rs  settle_core_asset_sale.rs  settle_nft_sale.rs  settle_tokens_sale.rs  settle_tokens_sale_claimed.rs  update_settings.rs
programs/mallow-gumball/program/src/processors/: add_item.rs  claim_nft.rs  claim_proceeds.rs  claim_tokens.rs  remove_item.rs
programs/mallow-gumball/program/src/state/: add_item_request.rs  gumball_machine.rs
programs/utils/: Cargo.toml
programs/utils/src/: checks.rs  royalties.rs  transfer.rs
(+55 files in other folders)
