[package]
name = "mallow-gumball"
version = "1.0.0"
description = "mallow Gumball: collaborative random sales of existing NFTs."
authors = ["Mallow Developers <dev@mallow.art>"]
repository = "https://github.com/mallow-labs/mallow-gumball"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed", "event-cpi"]}
anchor-spl = {version = "0.29.0"}
arrayref = ">=0.3.6"
solana-program = "=1.18.15"
mpl-token-metadata = ">=5.1.0"
mpl-core = { version= ">=0.9.1"}
utils = { path="../../utils" }